--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
-h1{
-    color: blue;
+/* Set page color to black*/
+body{
+    background-color: black;
 }
+/*Set navigation background black*/
+.nav {
+    background-color: rgb(2, 73, 8);
+    overflow: hidden;
+    position:absolute;
+    left:0;
+    right:0;
+  }
+  
+  /* Style links in navigation*/
+  .nav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 16px 18px;
+    text-decoration: none;
+    font-size: 16px;
+  }
+  
+  /* Change the color when hovering */
+  .nav a:hover {
+    background-color: #83edab;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .nav a.active {
+    background-color: #07db58;
+    color: black;
+  }
