--- a/style.css
+++ b/style.css
@@ -1,47 +1,54 @@
+/*Set navigation background black*/
+.nav {
+  background-color: rgb(2, 73, 8);
+  overflow: hidden;
+  position:absolute;
+  left:0;
+  right:0;
+}
+
+/* Style links in navigation*/
+.nav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 16px 18px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+/* Change the color when hovering */
+.nav a:hover {
+  background-color: #83edab;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.nav a.active {
+  background-color: #07db58;
+  color: black;
+}
+
 /* Set page color to black*/
 body{
     background-color: black;
     color: white;
 }
+/* Prevent header from hiding under nav bar */
 .topHalf{
     padding-top: 30px;
 }
+ /* Break remaining page into Two */
 .topHalf > img{
-    width: 500px;
-    height: auto;
+    width: auto;
+    height: 300px;
 }
-.bottomHalf > img{  
-    width: 300px;
-    height: auto;
-    }  
 
-/*Set navigation background black*/
-.nav {
-    background-color: rgb(2, 73, 8);
-    overflow: hidden;
-    position:absolute;
-    left:0;
-    right:0;
-  }
-  
-  /* Style links in navigation*/
-  .nav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 16px 18px;
-    text-decoration: none;
-    font-size: 16px;
-  }
-  
-  /* Change the color when hovering */
-  .nav a:hover {
-    background-color: #83edab;
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .nav a.active {
-    background-color: #07db58;
-    color: black;
-  }
+.bottomHalf > img{
+  width: 300px;  
+  height: auto;
+}  
+
+figcaption {
+  text-align: center;
+}
