--- a/style.css
+++ b/style.css
@@ -31,24 +31,60 @@
 
 /* Set page color to black*/
 body{
+    
     background-color: black;
     color: white;
 }
-/* Prevent header from hiding under nav bar */
-.top{
-    padding-top: 30px;
+h1{
+  text-align: center;
 }
- /* Break remaining page into Two */
-.top > img{
-    width: auto;
-    height: 300px;
+.grid-container{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-auto-rows: auto;
 }
 
+
+.top{
+    padding-top: 30px; /* Prevent header from hiding under nav bar */
+    grid-column: 1/4;
+    grid-row: 1/1;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+ /* Break remaining page into Two */
+.top > div img{
+  object-fit: cover;
+  width: auto;
+  max-height: 300px;
+}
+#projectHeader{
+  grid-column: 1/4;
+  grid-row: 1/1;
+}
+.project1{
+  grid-column: 1/1;
+  grid-row: 2/2;
+}
+.project2{
+  grid-column: 2/2;
+  grid-row: 2/2;
+}
+.project3{
+  grid-column: 3/3;
+  grid-row: 2/2;
+}
+figcaption{
+  text-align: center;
+}
+.middle{
+  grid-column: 1/4;
+  grid-row: 2/2;
+}
 .middle> img{
   width: 300px;  
   height: auto;
 }  
-
-figcaption {
-  text-align: center;
+.bottom{
+  grid-column: 1/4;
 }
