--- a/style.css
+++ b/style.css
@@ -51,12 +51,13 @@ h1{
     grid-row: 1/1;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    column-gap: 10px;
 }
  /* Break remaining page into Two */
 .top > div img{
   object-fit: cover;
-  width: auto;
-  max-height: 300px;
+  width: 100%;
+  max-height: 100%;
 }
 #projectHeader{
   grid-column: 1/4;
@@ -76,12 +77,13 @@ h1{
 }
 figcaption{
   text-align: center;
+  background-color: rgb(2, 73, 8) ;
 }
 .middle{
   grid-column: 1/4;
   grid-row: 2/2;
 }
-.middle> img{
+.personalImage{
   width: 300px;  
   height: auto;
 }  
