set up grid for bottom

--- a/style.css
+++ b/style.css
@@ -107,5 +107,26 @@ figcaption{
 }
 
 .bottom{
+  
   grid-column: 1/4;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+}
+
+.bottomHeader{
+  grid-column: 1/4;
+  grid-row: 1/1;
+  text-align: center;
+}
+
+.social{
+  
+  grid-column: 1/1;
+  grid-row: 2/2;
+}
+
+.contact{
+  
+  grid-column: 2/2;
+  grid-row: 2/2;
 }
