--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ was found on W3Schools.com and adjusted*/
 
 /*Set navigation background black*/
 .nav {
+
   background-color: rgb(2, 73, 8);
   overflow: hidden;
-  position:absolute;
+  position:fixed;
   left:0;
   right:0;
 }
@@ -83,6 +84,8 @@ h1{
 figcaption{
   text-align: center;
   background-color: rgb(2, 73, 8) ;
+  border: none;
+  border-radius: 8px;
 }
 .middle{
   grid-column: 1/4;
@@ -100,10 +103,13 @@ figcaption{
   padding-left: 100px;
 }
 .aboutMe{
+  text-align: center;
   grid-column: 2/4;
   grid-row: 2/2;
   font-size: 2.2vmax;
   background-color: rgb(2, 73, 8);
+  border: none;
+  border-radius: 8px;
 }
 .aboutMe > p{
   padding-left: 20px;
@@ -113,7 +119,6 @@ figcaption{
 }
 
 .bottom{
-  
   grid-column: 1/4;
   display: grid;
   grid-template-columns: repeat(2,1fr);
@@ -157,7 +162,7 @@ input[type=submit] {
   color: white;
   padding: 12px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 8px;
   cursor: pointer;
 }
 
